Fix wrong column name

--- a/app/views/reports/inactive_driver_status_report/_table.html.haml
+++ b/app/views/reports/inactive_driver_status_report/_table.html.haml
@@ -9,7 +9,7 @@
       - @drivers.each do |driver|
         %tr
           %td= driver.user_name
-          %td= driver.inactivated_reason
+          %td= driver.active_status_changed_reason
           %td= format_phone_number(driver.phone_number)
 - else
   %table.table.table-bordered
