Remove duplicated Run button from report page

--- a/app/views/reporting/reports/_header.html.haml
+++ b/app/views/reporting/reports/_header.html.haml
@@ -1,9 +1,10 @@
 - report = nil if local_assigns[:report].nil?
 .row.info-header{style: 'margin-top: 10px;'}
   .col-sm-12
-    .btns.pull-right
-      = button_tag type: :submit, id: 'runReporting', class: 'btn action-button controls' do
-        = translate_helper(:run)
+    - if @is_generic_report
+      .btns.pull-right
+        = button_tag type: :submit, id: 'runReporting', class: 'btn action-button controls' do
+          = translate_helper(:run)
     - if report
       %h1= @is_generic_report ? report.name : report.display_name
 
