--- a/app/views/vehicle_capacity_configurations/list.js.erb
+++ b/app/views/vehicle_capacity_configurations/list.js.erb
@@ -1,1 +1,1 @@
-$('.vehicle-capacities').html("<%= j (render 'list', vehicle_capacities: @vehicle_capacities) %>");
+$('.vehicle-capacity-configurations').html("<%= j (render 'list', vehicle_capacity_configurations: @vehicle_capacity_configurations) %>");
