--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -9,6 +9,8 @@
     %li= link_to translate_helper("system_driver_requirement_templates_link_text"), driver_requirement_templates_path
   - if can? :manage, VehicleRequirementTemplate
     %li= link_to translate_helper("system_vehicle_requirement_templates_link_text"), vehicle_requirement_templates_path
+  - if can? :manage, MobilityCapacity
+    %li= link_to translate_helper("mobility_capacities_link_text"), mobility_capacities_path
   - if can? :manage, LookupTable
     %li= link_to translate_helper("lookup_tables_link_text"), lookup_tables_path
   - if can? :manage, Translation
