--- a/app/views/mobility_capacities/index.html.haml
+++ b/app/views/mobility_capacities/index.html.haml
@@ -4,6 +4,8 @@
     min-width: 110px;
   }
 
+%h2= translate_helper(:mobility_capacities_link_text)
+
 - editable = can? :manage, MobilityCapacity
 %div
   %div{style: 'padding: 10px;'}
