--- a/app/views/mobility_capacities/batch_update.js.erb
+++ b/app/views/mobility_capacities/batch_update.js.erb
@@ -1,2 +1,2 @@
 $('.editable-unsaved').removeClass('editable-unsaved');
-window.location.reload();
+window.location.href = "<%= mobility_capacities_path %>";
